# MPI_domain_decomposition

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ford_doc_config.md  makeall.sh
.github/workflows/: update_license.yml
config/: intelmpi.cmake  intelmpi.mk  openmpi.cmake  openmpi.mk
src/: MOD_MPI_decomposition.f90  SMOD_MPI_halo_exchange.f90  SMOD_communication.f90  SMOD_get.f90  SMOD_helper.f90  SMOD_info.f90  SMOD_init_decomposition.f90  SMOD_packing.f90  SMOD_send_recieve.f90  SMOD_unpack.f90
test/: CMakeLists.txt  communications.pf  halo_exchange_test_1D.pf  halo_exchange_test_2D.pf  halo_exchange_test_3D.pf  install_pfUnit_MPI.sh  mytests.pf  packing_unpacking.pf  packing_unpacking_1D.pf  packing_unpacking_2D.pf  packing_unpacking_3D.pf  test_suites.inc
test_output/: Makefile  test_driver_output.f90
